src/snapshots/rattler_build__variant_config__tests__flatten_selectors.snap
---
source: src/variant_config.rs
expression: res
---
pin_run_as_build: ~
zip_keys: ~
c_compiler:
  - super_g++
cplusplus:
  - 10
  - 1000
cxx_compiler:
  - super_gcc
python:
  - "3.7"
  - "3.8"
unix_level:
  - 1
