src/snapshots/rattler_build__variant_config__tests__load_config_and_find_variants.snap
---
source: src/variant_config.rs
expression: used_variables_all
---
- libblas: 3.9 *netlib
  target_platform: linux-64

